added theme select

--- a/weather/src/app/app.component.html
+++ b/weather/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
-<div class="container">
-  <flash-messages></flash-messages>
-  <router-outlet></router-outlet>
+<div class="wrapper" app-theme>
+  <app-header></app-header>
+  <div class="container">
+    <flash-messages></flash-messages>
+    <router-outlet></router-outlet>
+  </div>
 </div>
