--- a/weather/src/app/components/favorites/favorites.component.scss
+++ b/weather/src/app/components/favorites/favorites.component.scss
@@ -11,7 +11,7 @@
     transform: translate(50%, -50%);
     border-radius: 50%;
     background: rgb(240,0,17);
-    background: linear-gradient(45deg, rgba(240,0,17,1) 0%, rgba(255,0,0,0) 100%);
+    background: var(--card-close-background);
   }
 }
 
