--- a/weather/src/app/shared/list.scss
+++ b/weather/src/app/shared/list.scss
@@ -20,11 +20,11 @@
 
 .card {
   text-align: center;
-  background-color: #ffffff50;
+  background-color: var(--card-background);
   padding: 10px;
-  -webkit-box-shadow: 0px 13px 32px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 13px 32px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 13px 32px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: var(--card-shadow);
+  -moz-box-shadow: var(--card-shadow);
+  box-shadow: var(--card-shadow);
 
   img {
     width: 75px;
