--- a/weather/src/styles.scss
+++ b/weather/src/styles.scss
@@ -1,5 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-image: url("assets/background.jpg");}
+
+body, html { height: 100% }
 .error { color: red; text-align: center;}
+* { box-sizing: border-box; }
+
+h1, h2, h3, h4, h5 { color: var(--text-color) }
+
+.mat-form-field-appearance-legacy .mat-form-field-label { color: var(--text-color); }
+
+.mat-form-field-appearance-legacy .mat-form-field-underline { background-color: var(--text-color); }
