--- a/weather/src/app/components/header/header.component.html
+++ b/weather/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
         <div class="nav-link">
           <span>Light Mode</span>
           <label class="switch">
-            <input type="checkbox" (click)="onToggleTheme()" [checked]="defaultTheme === 'dark'">
+            <input type="checkbox" (click)="onToggleTheme()" [checked]="selectedTheme === 'dark'">
             <span class="slider round"></span>
           </label>
           <span>Dark Mode</span>
