--- a/weather/src/app/app.component.html
+++ b/weather/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" app-theme>
+<div class="wrapper" appTheme>
   <app-header></app-header>
   <div class="container">
     <flash-messages></flash-messages>
