--- a/weather/src/styles.scss
+++ b/weather/src/styles.scss
@@ -3,6 +3,7 @@
 
 body, html { height: 100% }
 .error { color: red; text-align: center; word-break: break-all;}
+.alet-danger { word-break: break-all; }
 * { box-sizing: border-box; }
 
 h1, h2, h3, h4, h5 { color: var(--text-color) }
